<resources>
    <string name="app_name">CyanLab Photo Gallery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mode_recent">recent</string>
    <string name="mode_top">top</string>
    <string name="mode_pod">podhistory</string>
    <string name="mode_favorites">favorites</string>
    <string name="tab_item_recent">Новое</string>
    <string name="tab_item_top">Популярное</string>
    <string name="tab_item_pod">Фото дня</string>
    <string name="tab_item_favorites">Избранное</string>

    <string name="fav_info_1">Seems like you have not added any pictures to favorites so far</string>
    <string name="fav_info_2">You can do it in a several ways:</string>
    <string name="fab_info_3">Double tap picture in grid or when you preview it </string>
    <string name="fab_info_4">Tap on Add Favorite icon during the preview </string>
</resources>
