<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/sync_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sync_text_1"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_sync_problem_56dp" />

    <TextView
        android:id="@+id/sync_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sync_text_2"
        android:layout_centerHorizontal="true"
        android:text="Communication breakdown"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/sync_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="It’s always the same"
        android:textAlignment="center" />

    <RelativeLayout
        android:id="@+id/fav_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:visibility="gone">

        <TextView
            android:id="@+id/fab_info_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/fav_info_1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fav_info_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fab_info_text_1"
            android:layout_margin="8dp"
            android:text="@string/fav_info_2" />

        <TextView
            android:id="@+id/fav_info_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fav_info_text_2"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fab_info_3"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/fav_info_text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fav_info_text_3"
            android:layout_marginLeft="16dp"
            android:text="@string/fab_info_4"
            android:textStyle="bold|italic" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/image_holder" />
</RelativeLayout>