<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layoutAnimation="@anim/recycler_animation"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/image_holder" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="4dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="56dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/colorText" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/colorText">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_item_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_recent" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_item_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_top" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_item_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_item_favorites"
                android:visibility="visible" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="12dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>