<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteLowAlpha"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/refresh_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="56dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/colorText" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/AppTheme.Tab"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabTextColor="@color/colorText">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_item_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="false"
                android:text="@string/tab_item_recent" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_item_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="false"
                android:text="@string/tab_item_top" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_item_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:defaultFocusHighlightEnabled="false"
                android:text="@string/tab_item_favorites"
                android:visibility="visible" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="6dp"
        android:visibility="gone"
        app:elevation="6dp"
        app:srcCompat="@drawable/ic_expand_less_white_48dp" />

</android.support.design.widget.CoordinatorLayout>